# python-dev-actions-test-repo

./: README.md  pyproject.toml  setup.py
.github/workflows/: test_deployment.yml
test_package_root/: foo.py
tests/: test_foo.py
